# Neutral_News

backend/: Cargo.toml
backend/ap_backend/: Cargo.toml
backend/neutral_news_backend/: Cargo.toml
backend/neutral_news_backend/crawled_data/: apnews.com_5f5348c3.json
backend/neutral_news_backend/src/: main.rs  utils.rs
backend/python_similarity_graph/: graph.py  main.py  requirements.txt  schema.sql
backend/python_similarity_graph/data/: news.db
backend/python_similarity_graph/scripts/: init_db.py
backend/reuters_rss/: Cargo.toml
backend/rust_article_fetcher/: Cargo.toml  rss_feeds
backend/rust_article_fetcher/crawled_data/: two.txt
backend/rust_article_fetcher/rss/: one.txt  third.txt
backend/rust_article_fetcher/src/: ai_jazeera_rss.rs  ap_crawler.rs  main.rs  rss.rs  utils.rs
backend/src/: bbc_rss.rs  crawler.rs  dw_rss.rs  main.rs  npr_rss.rs  pbs_rss.rs
frontend/: package-lock.json  package.json
