[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "gzip", "stream", "rustls-tls"] }
robotstxt = "0.3.0"
scraper = "0.12"
log = "0.4"
fern = "0.6"
chrono = "0.4"
sha2 = "0.10.9"
serde_json = "1.0.140"
regex = "1"
select = "0.6"
feed-rs = "2.3.1"
futures = "0.3.31"
url = "2.5.4"
xmltree = "0.11.0"
