[package]
name = "neutral_news_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"] }
robotstxt = "0.3.0"
scraper = "0.12"
url = "2.2"
log = "0.4"
fern = "0.6"
chrono = "0.4"
sha2 = "0.10.9"
serde_json = "1.0.140"
regex = "1"
select = "0.6"